--- a/css/biz2/main.css
+++ b/css/biz2/main.css
@@ -81,61 +81,57 @@
 .layer-pop.on { display: block; }
 .layer-pop.simple-type .layer-content { width: 606px; }
 .layer-pop.simple-type .layer-content .layer-scroll { padding: 60px 118px; background: #fff; }
-.layer-pop .layer-content { overflow: hidden; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); max-width: var(--max-width, 840px); width: 100%; box-shadow: 0px 6px 16px rgba(15, 21, 34, 0.06);}
-.layer-pop .layer-content .layer-scroll { overflow-y: auto; position: relative; max-height: calc(100vh - 40px); padding: 60px; background: #FFF; border-radius: 20px;}
-.layer-pop .layer-content .layer-scroll > .title { display: block; position: relative; font-size: 24px; text-align: center; font-weight: 700;}
-.layer-pop .layer-content .layer-scroll .desc {color: var(--text-sub-33);}
-.layer-pop .layer-content .layer-scroll > .title .ic-edu { position: absolute; left: 0; top: 0; width: 176px; height: 34px; background: url(../../images/biz2/ic_pop_edu.png) no-repeat 0 0; }
-.layer-pop .layer-content .layer-scroll .close-btn { position: absolute; right: 20px; top: 18px; width: 24px; height: 24px; background: url(../../images/biz2/ic_pop_close.svg) no-repeat center center; }
-.layer-pop .layer-content .layer-scroll .send-input-area { margin-top: 32px; }
-.layer-pop .layer-content .layer-scroll .send-input-area .send-box > .tit { display: block; font-size: 16px; font-weight: bold; color: #333; }
-.layer-pop .layer-content .layer-scroll .send-input-area .send-box + .send-box { margin-top: 40px; }
-.layer-pop .layer-content .layer-scroll .send-input-area .send-box .input-group { display: flex; margin-top: 12px; }
-.layer-pop .layer-content .layer-scroll .send-input-area .send-box .input-group input[type=text] { flex: 1; height: 38px; border-radius: 6px; }
-.layer-pop .layer-content .layer-scroll .send-input-area .send-box .input-group .send-btn { height: 38px; margin-left: 12px; padding: 0 20px; border-radius: 6px; border: 1px solid #DDD; font-size: 16px; font-weight: bold; color: #333; }
-.layer-pop .layer-content .layer-scroll .send-input-area .notice-txt { display: block; margin-top: 16px; font-size: 14px; color: #555; padding-left: 15px; text-indent: -15px; }
+.layer-content { overflow: hidden; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); max-width: var(--max-width, 840px); width: 100%; box-shadow: 0px 6px 16px rgba(15, 21, 34, 0.06);}
+.layer-content .layer-scroll { overflow-y: auto; position: relative; max-height: calc(100vh - 40px); padding: 60px; background: #FFF; border-radius: 20px;}
+.layer-content .layer-scroll > .title { display: block; position: relative; font-size: 24px; text-align: center; font-weight: 700;}
+.layer-content .layer-scroll .desc {color: var(--text-sub-33);}
+.layer-content .layer-scroll > .title .ic-edu { position: absolute; left: 0; top: 0; width: 176px; height: 34px; background: url(../../images/biz2/ic_pop_edu.png) no-repeat 0 0; }
+.layer-content .layer-scroll .close-btn { position: absolute; right: 20px; top: 18px; width: 24px; height: 24px; background: url(../../images/biz2/ic_pop_close.svg) no-repeat center center; }
 /* 레이어 하단 정보 영역 */
-.layer-pop .layer-content .layer-scroll .info-area { margin-top: 30px;}
+.layer-content .layer-scroll .info-area { margin-top: 30px;}
+/* 중복 레이어 콘텐츠 */
+.layer-content + .layer-content {box-shadow: 0px 2px 6px 6px rgba(15, 21, 34, 0.06);}
+.layer-pop .hide-layer-content {display: none; border-radius: 20px;}
 
 
-.layer-pop .layer-content .layer-scroll .info-area > .tit { display: block; margin-bottom: 14px; font-size: 20px; font-weight: bold; color: #333; }
-.layer-pop .layer-content .layer-scroll .info-area .list-box { width: 267px; margin: 0 auto; }
-.layer-pop .layer-content .layer-scroll .info-area .list-box li { display: flex; align-items: center; }
-.layer-pop .layer-content .layer-scroll .info-area .list-box li + li { margin-top: 24px; }
-.layer-pop .layer-content .layer-scroll .info-area .list-box li .tit { flex-shrink: 0; width: 100px; font-size: 16px; font-weight: bold; color: #333333; }
-.layer-pop .layer-content .layer-scroll .info-area .list-box li input[type=text] { font-size: 14px; }
-.layer-pop .layer-content .layer-scroll .info-area .result-txt { margin-top: 56px; background: #F6FEFF; border-radius: 12px; border: 1px solid #ddd; padding: 20px; text-align: center; font-size: 16px; font-weight: 500; color: #191919; }
-.layer-pop .layer-content .layer-scroll .info-area .confirm-box { margin-top: 28px; }
-.layer-pop .layer-content .layer-scroll .info-area .confirm-box > .text { display: block; font-size: 14px; text-align: center; color: #555555; }
-.layer-pop .layer-content .layer-scroll .info-area .confirm-box .check-group { display: flex; justify-content: center; margin-top: 27px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box { padding-bottom: 22px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box > .tit { display: block; font-size: 16px; color: #555; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box > .tit + .txt { padding: 8px 0 0 12px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box > .txt { display: block; font-size: 14px; color: #797979; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box > .txt + .tit { margin-top: 26px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box > .noti-txt { display: block; margin-top: 90px; font-size: 14px; font-weight: bold; text-align: center; color: #191919; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box > .day { display: block; margin-top: 12px; font-size: 14px; font-weight: bold; color: #191919; text-align: right; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .textarea-group { margin-top: 32px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .textarea-group > .tit { display: block; font-size: 20px; font-weight: bold; color: #333333; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .textarea-group .txt { display: block; margin-top: 6px; font-size: 14px; color: #555555; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .textarea-group .check-item { margin-top: 24px; padding: 21px 24px; border-radius: 12px; border: 1px solid #DDDDDD; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .textarea-group .check-item .check-cnt + .check-cnt { margin-top: 12px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .textarea-group .check-item .check-cnt label { font-size: 14px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .textarea-group .text-item { margin-top: 50px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .textarea-group .text-item .txt { display: block; font-size: 14px; color: #555555; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .textarea-group .text-item textarea { margin-top: 8px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .table-group { margin-top: 30px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .table-group > .tit { display: block; font-size: 20px; font-weight: bold; color: #333; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .table-group + .txt { margin-top: 10px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .table-group + .table-group { margin-top: 24px; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .table-group + .table-group table { border-top: 1px solid #DDDDDD; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .table-group table { width: 100%; margin-top: 12px; border-top: 1px solid #191919; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .table-group table th { height: 40px; background: #EEEEEE; border-right: 1px solid #DDDDDD; border-bottom: 1px solid #DDDDDD; text-align: center; font-size: 14px; font-weight: bold; color: #555; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .table-group table th:last-child { border-right: 0; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .table-group table td { padding: 10px; border-right: 1px solid #DDDDDD; border-bottom: 1px solid #DDDDDD; font-size: 14px; color: #797979; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .table-group table td:last-child { border-right: 0; }
-.layer-pop .layer-content .layer-scroll .info-area .text-box .table-group table td.center { text-align: center; color: #191919; }
-.layer-pop .layer-content .layer-scroll .btn-box button { min-width: 74px; height: 38px; padding: 0 15px; border-radius: 6px; background: #00B3BE; font-size: 16px; font-weight: bold; color: #FFFFFF; }
+.layer-content .layer-scroll .info-area > .tit { display: block; margin-bottom: 14px; font-size: 20px; font-weight: bold; color: #333; }
+.layer-content .layer-scroll .info-area .list-box { width: 267px; margin: 0 auto; }
+.layer-content .layer-scroll .info-area .list-box li { display: flex; align-items: center; }
+.layer-content .layer-scroll .info-area .list-box li + li { margin-top: 24px; }
+.layer-content .layer-scroll .info-area .list-box li .tit { flex-shrink: 0; width: 100px; font-size: 16px; font-weight: bold; color: #333333; }
+.layer-content .layer-scroll .info-area .list-box li input[type=text] { font-size: 14px; }
+.layer-content .layer-scroll .info-area .result-txt { margin-top: 56px; background: #F6FEFF; border-radius: 12px; border: 1px solid #ddd; padding: 20px; text-align: center; font-size: 16px; font-weight: 500; color: #191919; }
+.layer-content .layer-scroll .info-area .confirm-box { margin-top: 28px; }
+.layer-content .layer-scroll .info-area .confirm-box > .text { display: block; font-size: 14px; text-align: center; color: #555555; }
+.layer-content .layer-scroll .info-area .confirm-box .check-group { display: flex; justify-content: center; margin-top: 27px; }
+.layer-content .layer-scroll .info-area .text-box { padding-bottom: 22px; }
+.layer-content .layer-scroll .info-area .text-box > .tit { display: block; font-size: 16px; color: #555; }
+.layer-content .layer-scroll .info-area .text-box > .tit + .txt { padding: 8px 0 0 12px; }
+.layer-content .layer-scroll .info-area .text-box > .txt { display: block; font-size: 14px; color: #797979; }
+.layer-content .layer-scroll .info-area .text-box > .txt + .tit { margin-top: 26px; }
+.layer-content .layer-scroll .info-area .text-box > .noti-txt { display: block; margin-top: 90px; font-size: 14px; font-weight: bold; text-align: center; color: #191919; }
+.layer-content .layer-scroll .info-area .text-box > .day { display: block; margin-top: 12px; font-size: 14px; font-weight: bold; color: #191919; text-align: right; }
+.layer-content .layer-scroll .info-area .text-box .textarea-group { margin-top: 32px; }
+.layer-content .layer-scroll .info-area .text-box .textarea-group > .tit { display: block; font-size: 20px; font-weight: bold; color: #333333; }
+.layer-content .layer-scroll .info-area .text-box .textarea-group .txt { display: block; margin-top: 6px; font-size: 14px; color: #555555; }
+.layer-content .layer-scroll .info-area .text-box .textarea-group .check-item { margin-top: 24px; padding: 21px 24px; border-radius: 12px; border: 1px solid #DDDDDD; }
+.layer-content .layer-scroll .info-area .text-box .textarea-group .check-item .check-cnt + .check-cnt { margin-top: 12px; }
+.layer-content .layer-scroll .info-area .text-box .textarea-group .check-item .check-cnt label { font-size: 14px; }
+.layer-content .layer-scroll .info-area .text-box .textarea-group .text-item { margin-top: 50px; }
+.layer-content .layer-scroll .info-area .text-box .textarea-group .text-item .txt { display: block; font-size: 14px; color: #555555; }
+.layer-content .layer-scroll .info-area .text-box .textarea-group .text-item textarea { margin-top: 8px; }
+.layer-content .layer-scroll .info-area .text-box .table-group { margin-top: 30px; }
+.layer-content .layer-scroll .info-area .text-box .table-group > .tit { display: block; font-size: 20px; font-weight: bold; color: #333; }
+.layer-content .layer-scroll .info-area .text-box .table-group + .txt { margin-top: 10px; }
+.layer-content .layer-scroll .info-area .text-box .table-group + .table-group { margin-top: 24px; }
+.layer-content .layer-scroll .info-area .text-box .table-group + .table-group table { border-top: 1px solid #DDDDDD; }
+.layer-content .layer-scroll .info-area .text-box .table-group table { width: 100%; margin-top: 12px; border-top: 1px solid #191919; }
+.layer-content .layer-scroll .info-area .text-box .table-group table th { height: 40px; background: #EEEEEE; border-right: 1px solid #DDDDDD; border-bottom: 1px solid #DDDDDD; text-align: center; font-size: 14px; font-weight: bold; color: #555; }
+.layer-content .layer-scroll .info-area .text-box .table-group table th:last-child { border-right: 0; }
+.layer-content .layer-scroll .info-area .text-box .table-group table td { padding: 10px; border-right: 1px solid #DDDDDD; border-bottom: 1px solid #DDDDDD; font-size: 14px; color: #797979; }
+.layer-content .layer-scroll .info-area .text-box .table-group table td:last-child { border-right: 0; }
+.layer-content .layer-scroll .info-area .text-box .table-group table td.center { text-align: center; color: #191919; }
+.layer-content .layer-scroll .btn-box button { min-width: 74px; height: 38px; padding: 0 15px; border-radius: 6px; background: #00B3BE; font-size: 16px; font-weight: bold; color: #FFFFFF; }
 
 /* ui */
 .sample-pop-btn { height: 44px; padding: 0 14px; border-radius: 8px; border: 1px solid #DDDDDD; font-size: 16px; color: #666; }
