--- a/css/biz2/mo.css
+++ b/css/biz2/mo.css
@@ -134,7 +134,7 @@
 	.steps li.active .step05::before{background-position:-428px -106px}
 	.steps li.active .step06::before{background-position:-535px -106px}
 	.steps li.active .step07::before{background-position:-639px -106px}
-	.steps li.active .step08::before{background-position:-750px -106px}
+	.steps li.active .step08::before{background-position:-745px -106px}
 
 	hr{margin:40px 0}
 
@@ -406,6 +406,7 @@
 	.use-ticket .border-box .ordered-list li{font-size:18px;}
 	.use-ticket .border-box .ordered-list li+li{margin-top:4px}
 	/* LNP_001 공지사항 */
+	.cs-center .search-input{margin-left:10px;}
 	.cs-center .search-area{padding:12px 10px;border-radius:6px;}
 	.cs-center .search-area .ui-select,
 	.search-area input[type="text"]{border-radius:6px;}
@@ -447,10 +448,37 @@
 	.qna .qna-table table .btn-download > span{display:block;overflow:hidden;font-size:0;line-height:0;position:absolute;text-indent:-9999px;width:1px;height:1px;}
 	.qna .qna-table table .btn-download::after{margin-left:0;margin-right:0;background-image:url(../../images/biz2/ico/ico_download_black.svg);}
 	/* LAP_201 이의제기 신청 */
-	.objection{padding-bottom:60px;}
 	.objection table.basic-info input[type=date]{width:100%;height:40px;}
-	.objection table.basic-info .filebox.flex-ac{position:relative;}
-	.objection table.basic-info .filebox.flex-ac .btns{position:absolute;top:50%;right:8px;width:24px;height:24px;background:url(../../images/biz2/ico/ico_file_up_mo.svg) no-repeat 50%;background-color:transparent !important;text-indent: -999px;transform:translateY(-50%);}
+	.objection table.basic-info .filebox.flex-ac, 
+	.file-up-area .filebox.flex-ac{position:relative;}
+	.objection table.basic-info .filebox.flex-ac .upload-name, 
+	.file-up-area .filebox.flex-ac .upload-name{height:40px;}
+	.objection table.basic-info .filebox.flex-ac .btns, 
+	.file-up-area .filebox.flex-ac .btns{position:absolute;top:50%;right:8px;width:24px;height:24px;background:url(../../images/biz2/ico/ico_file_up_mo.svg) no-repeat 50%;background-color:transparent !important;background-size:20px;text-indent: -999px;transform:translateY(-50%);}
+	.objection .btns-bottom{padding-bottom:60px;}
+	/* LAP_201 선정 포기 신청 */
+	.objection .com-write-table .basic-info td .row-gap{gap:10px;margin:0;}
+	.com-write-table + .info-box{margin-top:12px;}
+	.info-box{padding:16px;border:none;border-radius:16px;}
+	.info-box .title{font-size:21px;}
+	.info-box .title::before{margin:-2px 8px 0 0;background:transparent url(../../images/biz2/ico/ico_info_mo.svg) no-repeat 50%;vertical-align:middle;}
+	.info-box .bullet-list{margin-top:12px;font-size:18px;color:var(--text-primary-00);}
+	.info-box .bullet-list > li + li{margin-top:1px;}
+	/* LLIP_001 개인정보 수정 */
+	.user-info-up .asterisk{font-size:16px;}
+	.user-info-up .agree-box.learning{padding:0;border:none;border-radius:0;}
+	.user-info-up .agree-box.learning .chk-cont{padding:16px;border:1px solid var(--gray-30-d8);background-color:var(--gray-05-f8);border-radius:16px;}
+	.user-info-up .agree-box.learning .chk-cont .agree-tit{font-weight:500;}
+	.user-info-up .agree-box.learning .chk-cont .agree-radio{padding-left:0;padding-bottom:0;padding-top:0;}
+	.user-info-up .agree-box.learning .bullet-list{margin-top:10px;font-size:16px;}
+	.user-info-up .agree-box.learning .bullet-list li{padding-left:0;text-indent:0;}
+	.user-info-up .agree-box.learning .bullet-list li::before{content:'※ ';width:auto;height:auto;background-color:transparent;margin:0 1px 0 0;}
+	.user-info-up .agree-box.learning .bullet-list .link{color:var(--text-sub-33);font-weight:500;}
+	.user-info-up .agree-box.learning .bullet-list .link::before{content:'(';display:inline-block;margin-right:1px;}
+	.user-info-up .agree-box.learning .bullet-list .link::after{content:')';display:inline-block;margin-left:2px;}
+	/* LNP_300 질의응답 */
+	.cs-center .top-info-group .right-wrap.flex-ac{width:calc(100% - 100px);justify-content:flex-end;}
+	.cs-center .top-info-group .right-wrap.flex-ac .btns{width:auto;min-width:49px;height:36px;font-size:14px;font-weight:500;}
 	/* // Parkjm */
 }
 
