--- a/css/biz2/mo.css
+++ b/css/biz2/mo.css
@@ -247,11 +247,11 @@
 	footer .info-content .family-select-lg > button{width:100%}
 
 	/* 페이지네이션 공통 */
-	.com-paging{gap:6.4px;padding:0 9.2px}
-	.com-paging button, .com-paging .empty{width:32px;height:32px}
-	.com-paging button.next, .com-paging button.prev{font-size:15px;width:51.6px}
-	.com-paging button:not(.next, .prev){font-size:16px}
-	.com-paging button.next::after, .com-paging button.prev::after{width:16px;height:16px}
+	.paging {gap:6.4px;padding:0 9.2px}
+	.paging a, .paging .empty{width:32px;height:32px}
+	.paging a.next, .paging a.prev{font-size:15px;width:51.6px}
+	.paging a:not(.next, .prev){font-size:16px}
+	.paging a.next::after, .paging a.prev::after{width:16px;height:16px}
 
 	/* PC 전용 콘텐츠 */
 	.lg-only{display:none}
@@ -486,6 +486,16 @@
 	.qna .add-file .attached-file.file-name-area .ico-pdf{padding-left:16px;margin-right:4px;vertical-align:middle;}
 	.qna .add-file .attached-file.file-name-area .file-name{display:inline-block;max-width:calc(100% - 150px);height:56px;line-height:56px;overflow:hidden;text-overflow:ellipsis;display:-webkit-inline-box;-webkit-line-clamp:1;-webkit-box-orient:vertical;font-size:16px;color:var(--text-sub-33);vertical-align:middle;}	
 	.qna .add-file .attached-file.file-name-area .byte{font-size:16px;color:var(--text-sub-33);}
+	/* LIP_500 이용권 선정결과 */
+	.ticket-result .border-box02{padding:32px 24px;}
+	.ticket-result .border-box02 .txt{font-size:24px;font-weight:500;}
+	.ticket-result .border-box02+.asterisk{margin-top:12px;font-size:16px;}
+	/* LIP_200 평생교육이용권 이용 내역 */
+	.ticket-use-history.search-box{padding:12px 10px;background-color:#00B3BE;border-radius:6px;}    
+	.ticket-use-history.search-box .search-list{align-items:center;}
+	.ticket-use-history.search-box .search-list dt{width:auto;min-width:75px;color:var(--white);}
+	.ticket-use-history.search-box .btns{width:auto;height:40px;padding:7px 10ox 6px 10px;margin:0;background-color:#383838;}
+	.cs-center .top-info-group .btns.w-auto{width:auto;min-width:100px;}
 	/* // Parkjm */
 }
 
